--- a/package.json
+++ b/package.json
@@ -31,74 +31,79 @@
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1 --profile=amplify"
   },
   "dependencies": {
+    "@aws-sdk/util-utf8-browser": "^3.188.0",
     "@babel/plugin-proposal-class-properties": "^7.16.0",
     "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@date-io/moment": "^1.3.13",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/pickers": "^3.3.10",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@expo/config-plugins": "^5.0.4",
+    "@expo/prebuild-config": "^5.0.7",
+    "@mui/material": "^5.11.2",
+    "@mui/x-date-pickers": "^5.0.12",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/netinfo": "8.2.0",
-    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-native-community/netinfo": "9.3.5",
+    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "@sentry/react-native": "^3.1.1",
+    "@sentry/react-native": "4.9.0",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
     "@zoomus/websdk": "^1.9.8",
     "asset": "^0.4.13",
     "async-mutex": "^0.3.2",
-    "aws-amplify": "^4.2.9",
-    "aws-amplify-react-native": "^5.0.3",
-    "babel-preset-expo": "~9.1.0",
+    "aws-amplify": "^5.0.8",
+    "aws-amplify-react-native": "^7.0.2",
+    "babel-preset-expo": "~9.2.1",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "emotion-theming": "^11.0.0",
-    "expo": "^45.0.0",
-    "expo-camera": "~12.2.0",
-    "expo-linking": "~3.1.0",
-    "expo-permissions": "~13.2.0",
+    "expo": "^47.0.0",
+    "expo-camera": "~13.1.0",
+    "expo-linking": "~3.3.0",
+    "expo-permissions": "~14.0.0",
     "is-absolute-url": "^4.0.1",
     "jquery": "^3.6.0",
     "maplibre-gl": "^1.15.2",
-    "maplibre-gl-js-amplify": "^1.1.3",
+    "maplibre-gl-js-amplify": "^3.0.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "only-last-promise": "^1.0.0",
-    "react": "17.0.2",
-    "react-datepicker": "^3.6.0",
-    "react-device-detect": "^1.17.0",
-    "react-dom": "17.0.2",
+    "react": "18.1.0",
+    "react-datepicker": "^4.8.0",
+    "react-device-detect": "^2.2.2",
+    "react-dom": "18.1.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-input-color": "^4.0.1",
-    "react-native": "0.68.2",
+    "react-native": "0.70.5",
     "react-native-calendars": "1.1266.0",
     "react-native-dev-menu": "^4.0.2",
     "react-native-dropdown-picker": "^5.4.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-maps": "0.30.2",
+    "react-native-maps": "1.3.2",
     "react-native-modal": "^11.5.6",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-progress-wheel": "^1.0.5",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-reanimated": "2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.11.1",
+    "react-native-screens": "~3.18.0",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.10",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.7",
     "react-native-web-maps": "^0.3.0",
-    "react-native-windows": "^0.68.0",
+    "react-native-windows": "^0.70.0",
     "react-places-autocomplete": "^7.3.0",
     "react-tooltip": "^4.2.21",
     "request": "^2.88.2",
     "resize-observer-polyfill": "^1.5.1",
-    "sentry-expo": "^4.2.0",
+    "sentry-expo": "~6.0.0",
     "universal-cookie": "^4.0.4",
     "zen-observable-ts": "^0.8.21"
   },
@@ -113,21 +118,18 @@
   },
   "private": true,
   "devDependencies": {
-    "graphql-ttl-transformer": "^2.0.0",
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.15.6",
-    "@cypress/code-coverage": "^3.9.11",
-    "@cypress/webpack-preprocessor": "^5.5.0",
-    "@expo/webpack-config": "^0.16.27",
+    "@expo/webpack-config": "^0.17.2",
     "@sentry/cli": "^2.5.0",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@types/draft-js": "^0.11.5",
     "@types/draftjs-to-html": "^0.8.1",
     "@types/googlemaps": "^3.39.8",
-    "@types/react": "~17.0.21",
-    "@types/react-dom": "~17.0.11",
+    "@types/react": "~18.0.24",
+    "@types/react-dom": "~18.0.8",
     "@types/react-draft-wysiwyg": "^1.13.3",
-    "@types/react-native": "0.68.2",
+    "@types/react-native": "~0.70.6",
     "@types/react-native-calendars": "^1.1264.2",
     "@types/react-places-autocomplete": "^7.2.8",
     "@types/uuid": "^8.3.1",
@@ -138,20 +140,20 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "cypress": "^8.4.0",
+    "cypress": "^12.2.0",
     "cypress-file-upload": "^5.0.8",
-    "dynamic-cdn-webpack-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "expo-cli": "^6.0.1",
+    "graphql-ttl-transformer": "^2.0.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.4.0",
     "start-server-and-test": "^1.14.0",
-    "typescript": "~4.3.5",
+    "typescript": "^4.6.3",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
