--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # OSX
 #
 .DS_Store
-src/version.js
+#src/version.js
 .nyc_output
 web-build
 # Xcode
@@ -68,6 +68,7 @@ coverage/
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
+amplify/.temp
 amplify/logs
 amplify/mock-data
 amplify/backend/amplify-meta.json
@@ -75,7 +76,6 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
-aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
 amplifyconfiguration.dart
