Cypress fix and update

--- a/.eslintignore
+++ b/.eslintignore
@@ -12,3 +12,5 @@ rn-cli.config.js
 screens/HomeScreen/NavigationRoot.ts
 components/TestHelpers/TestHelpers.js
 metro.config.js
+cypress/*
+cypress.config.ts
