--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "prebuild": "",
     "build": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;sentry-cli releases new -p jesus-collective $VERSION;sentry-cli releases set-commits --auto $VERSION;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo build:web;sentry-cli releases finalize $VERSION;sentry-cli releases deploys $VERSION new -e beta;",
     "start": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start",
-    "start:web": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start:web",
-    "testWeb": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start:web",
+    "start:web": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start --web",
+    "testWeb": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start --web",
     "buildExpo": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;sentry-cli releases new -p jesus-collective $VERSION;sentry-cli releases set-commits --auto $VERSION;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;expo build:ios -t archive;expo build:android -t apk;sentry-cli releases finalize $VERSION;sentry-cli releases deploys $VERSION new -e prod;curl --header 'Content-Type: application/json' --request POST --data '{\"content\":\"Published a new version of app from commit: '$VERSION'\"}' $DISCORD_WEBHOOK_JC",
     "debug": "npx expo start",
     "cy:open": "cypress open",
@@ -121,8 +121,10 @@
   },
   "private": true,
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.0",
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.15.6",
+    "@cypress/webpack-preprocessor": "^5.16.1",
     "@expo/webpack-config": "^0.17.2",
     "@sentry/cli": "^2.5.0",
     "@sheerun/mutationobserver-shim": "^0.3.3",
