Add Resource Admin, simplify crm, menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,9 +17,11 @@
     "editor.formatOnSave": false
   },
   "cSpell.words": [
+    "customqueries",
     "fileupload",
     "geocode",
     "Graphik",
+    "Ionicons",
     "testid",
     "uuidv"
   ]
